<resources>
    <string name="app_name">AutoHome</string>
    <string name="refresh">REFRESH</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="welcome_text">Welcome to the AutoHome !</string>
    <string name="autohome">AutoHome</string>
    <string name="get_started">Get started</string>
    <string name="connected_with">Connected with:</string>
    <string name="autohome_project">AUTOHOME PROJECT</string>
    <string name="device_name">Device Name</string>
    <string name="timer_number_text">00:00:00</string>
    <string name="set_timer">Set timer</string>
    <string name="cancel_timer">cancel timer</string>
    <string name="devices_name_text">Device Name</string>
    <string name="device_address">Device Address</string>
    <string name="connect">Connect</string>
    <string name="paired_devices">paired Devices</string>
    <string name="initial_connection_text">Not Connected With Any Devices</string>
    <string name="connection_text">Connected With: </string>
    <string name="timer_str">Timer (Minute)</string>
    <string name="set">Set</string>


</resources>