<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControlActivity">



    <Button
        android:id="@+id/paired_device_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background1"
        android:text="@string/paired_devices"
        android:layout_marginTop="34dp"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/connected_device_text_layout"
        android:layout_marginVertical="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_below="@+id/paired_device_btn"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/connected_device_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/connected_with"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/connected_device_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/autohome_project"
            android:layout_marginStart="5dp"
            android:textAlignment="center"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/device_controll_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/timer_setting_box"
        android:layout_alignParentBottom="true" />

    <LinearLayout
        android:id="@+id/timer_setting_box"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_below="@+id/connected_device_text_layout"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/timer_number_box"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/timer_str"
        android:inputType="number"
        android:autofillHints="" />

        <Button
            android:id="@+id/timer_save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/background1"
            android:layout_marginStart="10dp"
            android:text="@string/set" />

    </LinearLayout>

</RelativeLayout>