<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/background1"
        android:padding="15dp">


        <TextView
            android:id="@+id/device_name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:text="@string/device_name"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/device_control_toggle"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_toEndOf="@+id/device_name"
            android:background="@drawable/toggle_button_background"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/device_control_toggle"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/device_timer_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/timer_number_text"
                android:textAlignment="center" />

            <ToggleButton
                android:id="@+id/device_set_timer_toggle"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:background="@drawable/button_background2"
                android:textColor="@color/white"
                android:textOff="@string/set_timer"
                android:textOn="@string/cancel_timer"
                android:textSize="12sp" />
        </LinearLayout>


    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>