<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartingActivity">

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/autohome"
        android:textSize="50sp" />

<!--    <Button-->
<!--        android:id="@+id/signin_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_above="@+id/or_text"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="50dp"-->
<!--        android:paddingHorizontal="40dp"-->
<!--        android:paddingVertical="10dp"-->
<!--        android:text="Sign In"-->
<!--        android:textSize="18dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/or_text"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_above="@+id/get_started_button"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:textSize="18dp"-->
<!--        android:text="OR"/>-->
    <Button
        android:id="@+id/get_started_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="80dp"
        android:text="@string/get_started"
        android:paddingHorizontal="40dp"
        android:backgroundTint="@color/blue"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:paddingVertical="10dp"/>

    <TextView
        android:id="@+id/recommended_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/get_started_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:padding="20dp"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textSize="15sp" />



</RelativeLayout>